k8s/0911/lion-pod-db-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: db
spec:
  containers:
    - name: db
      image: postgres:13
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          # subPath: postgres
      ports:
        - containerPort: 5432
          name: db-port
  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: db-pod-pvc
