k8s/0911/lion-svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-nodeport
spec:
  type: NodePort
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: db-port
