k8s/0911/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db
spec:
  rules:
  - host: db.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db-nodeport
            port:
              number: 80
